now-u/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: now-u-causes
spec:
  selector:
    matchLabels:
      app: now-u-causes
  replicas: 2
  template:
    metadata:
      labels:
        app: now-u-causes
    spec:
      containers:
      - name: now-u-backend
        image: ghcr.io/now-u/now-u-backend
        ports:
        - containerPort: 5000
          name: http-svc
---
apiVersion: v1
kind: Service
metadata:
  name: now-u-causes
  labels:
    app: now-u-causes
spec:
  ports:
  - name: now-u-causes-svc-port
    protocol: TCP
    port: 80
    targetPort: http-svc
  selector:
    app: now-u-causes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: now-u-causes-ingress
  annotations:
     cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - causes.dev.apiv2.now-u.com
    secretName: now-u-causes-ingress-tls
  rules:
  - host: causes.dev.apiv2.now-u.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: now-u-causes
            port:
              number: 80
